--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -62,7 +61,7 @@ del {
 }
 
 html {
-  font-family: "PingFang SC", "Helvetica Neue", Helvetica, "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
+  font-family: "fzjh", "Lucida Grande", "Lucida Sans Unicode", Arial, HELVETICA;
   word-wrap: break-word;
   white-space: normal;
   word-break: break-all;
@@ -187,7 +186,7 @@ table {
 }
 
 .bodybox {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   z-index: 1;
 }
@@ -288,6 +287,136 @@ table {
           transform: translateX(-50%);
   background: url(../img/page3_1.png) no-repeat;
   background-size: 100%;
+  z-index: 100;
+}
+.bodybox .page3 .txt1 {
+  position: absolute;
+  top: 5.65rem;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  font-size: 1.5rem;
+  color: #fff;
+  width: 100%;
+  text-align: center;
+}
+.bodybox .page3 .txt2 {
+  position: absolute;
+  top: 8.05rem;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  font-size: 1.5rem;
+  color: #fff;
+  width: 100%;
+  text-align: center;
+}
+.bodybox .page3 .l_txt1 {
+  position: absolute;
+  top: 13.25rem;
+  left: 1.3rem;
+  font-size: 0.9rem;
+  color: rgba(83, 109, 209, 0.45);
+  width: 100%;
+}
+.bodybox .page3 .l_txt2 {
+  position: absolute;
+  top: 15.95rem;
+  left: 1.9rem;
+  font-size: 1.75rem;
+  color: rgba(83, 109, 209, 0.45);
+  width: 100%;
+}
+.bodybox .page3 .l_txt3 {
+  position: absolute;
+  top: 18.5rem;
+  left: 2.6rem;
+  font-size: 1.25rem;
+  color: rgba(83, 109, 209, 0.45);
+  width: 100%;
+}
+.bodybox .page3 .l_txt4 {
+  position: absolute;
+  top: 20.75rem;
+  left: 1.4rem;
+  font-size: 1.5rem;
+  color: rgba(83, 109, 209, 0.45);
+  width: 100%;
+}
+.bodybox .page3 .l_txt5 {
+  position: absolute;
+  top: 23.25rem;
+  left: 2.25rem;
+  font-size: 1.1rem;
+  color: rgba(83, 109, 209, 0.45);
+  width: 100%;
+}
+.bodybox .page3 .r_txt1 {
+  position: absolute;
+  top: 12.55rem;
+  right: 2.6rem;
+  font-size: 1.8rem;
+  color: rgba(83, 109, 209, 0.45);
+  width: 100%;
+  text-align: right;
+}
+.bodybox .page3 .r_txt2 {
+  position: absolute;
+  top: 15.35rem;
+  right: 1.6rem;
+  font-size: 1.1rem;
+  color: rgba(83, 109, 209, 0.45);
+  width: 100%;
+  text-align: right;
+}
+.bodybox .page3 .r_txt3 {
+  position: absolute;
+  top: 18.2rem;
+  right: 1.35rem;
+  font-size: 0.85rem;
+  color: rgba(83, 109, 209, 0.45);
+  width: 100%;
+  text-align: right;
+}
+.bodybox .page3 .r_txt4 {
+  position: absolute;
+  top: 20.15rem;
+  right: 1rem;
+  font-size: 1.5rem;
+  color: rgba(83, 109, 209, 0.45);
+  width: 100%;
+  text-align: right;
+}
+.bodybox .page3 .r_txt5 {
+  position: absolute;
+  top: 22.4rem;
+  right: 1.8rem;
+  font-size: 0.9rem;
+  color: rgba(83, 109, 209, 0.45);
+  width: 100%;
+  text-align: right;
+}
+.bodybox .page3 .b_txt1 {
+  position: absolute;
+  top: 26.7rem;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  font-size: 0.75rem;
+  color: #b3bee2;
+  width: 100%;
+  text-align: center;
+}
+.bodybox .page3 .b_txt2 {
+  position: absolute;
+  top: 27.9rem;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  font-size: 0.75rem;
+  color: #b3bee2;
+  width: 100%;
+  text-align: center;
 }
 .bodybox .page4, .bodybox .page5, .bodybox .page6, .bodybox .page7, .bodybox .page8, .bodybox .page9, .bodybox .page10, .bodybox .page11, .bodybox .page12, .bodybox .page13 {
   width: 100%;
@@ -501,14 +630,19 @@ table {
   background-image: url(../img/page13_1.png);
 }
 .bodybox .page13 .text2 {
-  background-image: url(../img/page13_2.png);
+  background: none;
   top: 9.25rem;
   width: 9.025rem;
   height: 10.5rem;
 }
+.bodybox .page13 .text2 img {
+  display: block;
+  width: 100%;
+}
 
 .body {
   position: relative;
+  margin: 0 auto;
 }
 .body .audio_i {
   position: absolute;
@@ -567,6 +701,77 @@ body .top_text4 {
 
 .page_subset {
   opacity: 0;
+}
+
+.body_pc {
+  width: 750px;
+}
+
+.opacity0 {
+  opacity: 0;
+}
+
+.show2_1 {
+  -webkit-animation: show_text 1.5s 1s ease-out;
+          animation: show_text 1.5s 1s ease-out;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+}
+
+.show2_2 {
+  -webkit-animation: show_text 1.5s 1.5s ease-out;
+          animation: show_text 1.5s 1.5s ease-out;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+}
+
+.show2_3 {
+  -webkit-animation: show_text 1.5s 2s ease-out;
+          animation: show_text 1.5s 2s ease-out;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+}
+
+.show2_4 {
+  -webkit-animation: show_text 1.5s 2.5s ease-out;
+          animation: show_text 1.5s 2.5s ease-out;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+}
+
+.show2_5 {
+  -webkit-animation: show_text 1.5s 3s ease-out;
+          animation: show_text 1.5s 3s ease-out;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+}
+
+.show2_6 {
+  -webkit-animation: show_text 1.5s 3.5s ease-out;
+          animation: show_text 1.5s 3.5s ease-out;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+}
+
+.show2_7 {
+  -webkit-animation: show_text 1.5s 4s ease-out;
+          animation: show_text 1.5s 4s ease-out;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+}
+
+.show2_8 {
+  -webkit-animation: show_text 1.5s 4.5s ease-out;
+          animation: show_text 1.5s 4.5s ease-out;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+}
+
+.show2_9 {
+  -webkit-animation: show_text 1.5s 5s ease-out;
+          animation: show_text 1.5s 5s ease-out;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
 }
 
 /*# sourceMappingURL=index.css.map */
