--- a/css/index.scss
+++ b/css/index.scss
@@ -64,7 +64,7 @@ html {
   //font-family: "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif, "PingFang SC", "Hiragino Sans GB";
   // font-family: "PingFang SC", "Helvetica Neue", Helvetica, "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial,
   //   sans-serif;
-  font-family: "fzjh", "Lucida Grande", "Lucida Sans Unicode", Arial, HELVETICA;
+  font-family: "webfont", "fzjh", "Lucida Grande", "Lucida Sans Unicode", Arial, HELVETICA;
   //   font-size: 12px;
   word-wrap: break-word;
   white-space: normal;
@@ -135,6 +135,11 @@ table {
 
 .clearfix {
   zoom: 1;
+}
+
+@font-face {
+  font-family: "webfont";
+  src: url("../font/h5.TTF") format("truetype");
 }
 
 //页面样式
@@ -475,7 +480,7 @@ table {
       height: r(35px);
     }
     .page_subset {
-      top: r(450px);
+      top: r(428px);
     }
   }
   .page7 {
@@ -625,7 +630,7 @@ table {
       top: r(370px);
       width: r(361px);
       height: r(420px);
-      img{
+      img {
         display: block;
         width: 100%;
       }
